--- a/DNN_Scratch.ipynb
+++ b/DNN_Scratch.ipynb
@@ -84,11 +84,11 @@
       "cell_type": "code",
       "source": [
         "def load_data():\n",
-        "    train_dataset = h5py.File('/content/drive/MyDrive/Neural Network/train_catvnoncat.h5', \"r\")\n",
+        "    train_dataset = h5py.File('train_catvnoncat.h5', \"r\")\n",
         "    train_set_x_orig = np.array(train_dataset[\"train_set_x\"][:]) # your train set features\n",
         "    train_set_y_orig = np.array(train_dataset[\"train_set_y\"][:]) # your train set labels\n",
         "\n",
-        "    test_dataset = h5py.File('/content/drive/MyDrive/Neural Network/test_catvnoncat.h5', \"r\")\n",
+        "    test_dataset = h5py.File('test_catvnoncat.h5', \"r\")\n",
         "    test_set_x_orig = np.array(test_dataset[\"test_set_x\"][:]) # your test set features\n",
         "    test_set_y_orig = np.array(test_dataset[\"test_set_y\"][:]) # your test set labels\n",
         "\n",
